UI: Minor changes to home screen/login screen
Added scripts for installing and starting CRM

--- a/CRM/views/home.ejs
+++ b/CRM/views/home.ejs
@@ -28,9 +28,7 @@
         <!-- Main content here -->
         <h1> Welcome to your Dashboard, <%-  user.username.charAt(0).toUpperCase() + user.username.slice(1);%>! </h1>
         <hr>
-        <h5 class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna fermentum iaculis eu non diam. Maecenas accumsan lacus vel facilisis volutpat. Fusce ut placerat orci nulla pellentesque dignissim. Nibh tellus molestie nunc non. Arcu cursus euismod quis viverra nibh. Commodo sed egestas egestas fringilla. Vitae nunc sed velit dignissim sodales ut eu sem. Magna ac placerat vestibulum lectus. Vitae auctor eu augue ut. Ultricies lacus sed turpis tincidunt id aliquet. Ipsum dolor sit amet consectetur adipiscing elit.</h5>
 
-        <hr>
 
 <!-- Card Portion for Dashboards -->
 
@@ -136,7 +134,7 @@
 
           <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mx-0 my-2 px-1">
             <div class="card h-100">
-              <div class="card-header"><strong>Clients Due for Visit</strong></div>
+              <div class="card-header"><strong>Clients Due for Visit (No Visits in the Past 30 days)</strong></div>
               <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-sm table-borderless table-striped px-2 py-2">
