Various UI Changes:  - Fixed footer for each page  - Aligned the Change PW page to the current design

--- a/CRM/views/entry-client.ejs
+++ b/CRM/views/entry-client.ejs
@@ -56,7 +56,7 @@
           <div class="form-row">
             <div class="form-group col-12 col-md-auto">
               <label for="clientPhone">Client Contact Number</label>
-              <input type="text" class="form-control" id="clientPhone" name="clientPhone" placeholder="Phone Number" required>
+              <input type="text" class="form-control" id="clientPhone" name="clientPhone" placeholder="Phone Number">
             </div>
             <div class="form-group col-12 col-md-auto">
               <label for="clientFax">Client Fax Number</label>
@@ -106,7 +106,7 @@
             <label for="inputAddress">Client Email Addresses</label>
             <div class="form-row">
           			<div class="form-group col-12 col-md-auto">
-          			  <input type="email" class="form-control" id="clientEmail1" name="clientEmail1" placeholder="user1@email.com" required>
+          			  <input type="email" class="form-control" id="clientEmail1" name="clientEmail1" placeholder="user1@email.com">
           			</div>
           			<div class="form-group col-12 col-md-auto">
           			  <input type="email" class="form-control" id="clientEmail2" name="clientEmail2" placeholder="user2@email.com">
@@ -156,7 +156,7 @@
     </div>
     <footer class="c-footer">
       <!-- Footer content here -->
-      <h2>Footer Content</h2>
+      <% include partials/footer %>
     </footer>
   </div>
 
