--- a/CRM/views/entry-event.ejs
+++ b/CRM/views/entry-event.ejs
@@ -151,7 +151,7 @@
     </div>
     <footer class="c-footer">
       <!-- Footer content here -->
-      <h2>Footer Content</h2>
+      <% include partials/footer %>
     </footer>
   </div>
 
