--- a/CRM/views/index.ejs
+++ b/CRM/views/index.ejs
@@ -19,9 +19,11 @@
 		<div class="c-body">
 			<main class="c-main">
 
-					<div class="container" style="max-width:500px">
-						<img src="/images/recordpurple.svg" class="img-fluid" alt="Responsive image">
-					</div>
+        <div class="container" style="max-width:500px">
+          <a href="/">
+            <img src="/images/recordpurple.svg" class="img-fluid" alt="Responsive image">
+          </a>
+        </div>
 
 			    <!-- LOGIN FORM -->
 			    <form action="/login" method="post">
