--- a/CRM/views/list-event.ejs
+++ b/CRM/views/list-event.ejs
@@ -78,7 +78,7 @@
     </div>
     <footer class="c-footer">
       <!-- Footer content here -->
-      <h1>Footer Content</h1>
+      <% include partials/footer %>
     </footer>
   </div>
 
