--- a/CRM/views/change-password.ejs
+++ b/CRM/views/change-password.ejs
@@ -1,65 +1,95 @@
 <!DOCTYPE html>
-<html>
-  <head>
-	<link rel='stylesheet' href='https://unpkg.com/@coreui/coreui@2.1.16/dist/css/coreui.min.css' />
-    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
-  </head>
-  <script> 
-    // Function to check Whether both passwords 
-    // is same or not. 
-    function checkPassword(form) { 
-        password1 = form.newPassword.value; 
-        password2 = form.newPasswordRetype.value; 
 
-        // If password not entered 
-        if (password1 == '') {
-            alert ("Please enter Password"); 
-            return false; 
-        }
-              
-        // If confirm password not entered 
-        else if (password2 == '') {
-            alert ("Please enter confirm password"); 
-            return false; 
-        }
-              
-        // If Not same return False.     
-        else if (password1 != password2) { 
-            alert ("\nPassword did not match: Please try again...") 
-            return false; 
-        } 
+<html lang="en">
+ <head>
+ <!-- Required meta tags -->
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        // If same return True. 
-        else{ 
-            return true; 
-        } 
-    } 
-  </script> 
-  <body>
-       <main class="main mt-0 mx-3">
-         <h2>Change Password</h2>
-         <hr>
-        <form id="changePW" name="changePW" method="post" action="/changePW" onSubmit="return checkPassword(this)">
-			<div class="form-row">
-				<div class="form-group col-12 col-md-auto">
-				  <label for="oldPassword">Current Password</label>
-				  <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Password"  required>
-				</div>
-				<div class="form-group col-12 col-md-auto">
-				  <label for="newPassword">New Password</label>
-				  <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="Password"  required>
-				</div>
-				<div class="form-group col-12 col-md-auto">
-				  <label for="newPasswordRetype">Re-Type New Password</label>
-				  <input type="password" class="form-control" id="newPasswordRetype" name="newPasswordRetype" placeholder="Re-TypePassword" required>
-				</div>
-			</div>
-		    <div class="row">
-				<div class="col-12 col-md-auto">
-				<input class="btn-block btn-primary btn-lg" type="submit" value="Submit">
-				</div>
-		    </div>
+ <!-- CoreUI CSS -->
+ <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui@3.0.0-rc.0/dist/css/coreui.min.css" crossorigin="anonymous">
+ <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
+
+ <title>RECORD</title>
+</head>
+<script>
+  // Function to check Whether both passwords
+  // is same or not.
+  function checkPassword(form) {
+      password1 = form.newPassword.value;
+      password2 = form.newPasswordRetype.value;
+
+      // If password not entered
+      if (password1 == '') {
+          alert ("Please enter Password");
+          return false;
+      }
+
+      // If confirm password not entered
+      else if (password2 == '') {
+          alert ("Please enter confirm password");
+          return false;
+      }
+
+      // If Not same return False.
+      else if (password1 != password2) {
+          alert ("\nPassword did not match: Please try again...")
+          return false;
+      }
+
+      // If same return True.
+      else{
+          return true;
+      }
+  }
+</script>
+<body class="c-app">
+	<div class="c-wrapper container">
+		<header class="c-header c-header-dark bg-primary c-header-fixed">
+			<!-- Header content here -->
+		</header>
+		<div class="c-body">
+			<main class="c-main">
+
+					<div class="container" style="max-width:500px">
+            <a href="/">
+              <img src="/images/recordpurple.svg" class="img-fluid" alt="Responsive image">
+            </a>
+					</div>
+
+			    <!-- CHANGE PW FORM -->
+          <form id="changePW" name="changePW" method="post" action="/changePW" onSubmit="return checkPassword(this)">
+      			<div class="form-row justify-content-md-center px-5">
+      				<div class="form-group col-12 col-md-3">
+      				  <label for="oldPassword">Current Password</label>
+      				  <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Password"  required>
+      				</div>
+            </div>
+            <div class="form-row justify-content-md-center px-5">
+              <div class="form-group col-12 col-md-3">
+        				 <label for="newPassword">New Password</label>
+        				 <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="Password"  required>
+      				</div>
+            </div>
+            <div class="form-row justify-content-md-center px-5">
+      				<div class="form-group col-12 col-md-3">
+      				  <label for="newPasswordRetype">Re-Type New Password</label>
+      				  <input type="password" class="form-control" id="newPasswordRetype" name="newPasswordRetype" placeholder="Re-TypePassword" required>
+      				</div>
+      			</div>
+    		    <div class="form-row justify-content-center px-5">
+      				<div class="form-group col-12 col-md-3">
+      				      <input class="btn-block btn-primary btn-lg" type="submit" value="Submit">
+      				</div>
+    		    </div>
           </form>
-        </main>
-  </body>
+
+			</main>
+			</div>
+		</div>
+		<!-- Popper.js first, then CoreUI JS -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha384-L2pyEeut/H3mtgCBaUNw7KWzp5n9&#43;4pDQiExs933/5QfaTh8YStYFFkOzSoXjlTb" crossorigin="anonymous"></script>
+		<script src="https://unpkg.com/@coreui/coreui@3.0.0-rc.0/dist/js/coreui.min.js"></script>
+
+</body>
 </html>
