--- a/CRM/views/entry-contact.ejs
+++ b/CRM/views/entry-contact.ejs
@@ -53,7 +53,7 @@
                   <input type="text" class="form-control" id="contactFirstName" name="contactFirstName" placeholder="First Name" required>
                 </div>
                 <div class="form-group col-12 col-md-auto">
-                  <input type="text" class="form-control" id="contactLastName" name="contactLastName" placeholder="Last Name" required>
+                  <input type="text" class="form-control" id="contactLastName" name="contactLastName" placeholder="Last Name">
                 </div>
               </div>
 
@@ -69,7 +69,7 @@
             <label for="contactPhone">Contact Numbers</label>
               <div class="form-row">
           			<div class="form-group col-12 col-md-auto">
-          			  <input type="text" class="form-control" id="contactPhone" name="contactPhone" placeholder="Phone Number" required>
+          			  <input type="text" class="form-control" id="contactPhone" name="contactPhone" placeholder="Phone Number">
           			</div>
           			<div class="form-group col-12 col-md-auto">
           			  <input type="text" class="form-control" id="contactMobile" name="contactMobile" placeholder="Mobile Number">
@@ -80,7 +80,7 @@
             <label for="inputAddress">Email Address</label>
               <div class="form-row">
           			<div class="form-group col-12 col-md-auto">
-          			  <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="user@email.com" required>
+          			  <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="user@email.com">
           			</div>
           	</div>
 
@@ -105,7 +105,7 @@
     </div>
     <footer class="c-footer">
       <!-- Footer content here -->
-      <h2>Footer Content</h2>
+      <% include partials/footer %>
     </footer>
   </div>
 
