--- a/CRM/views/import-agent.ejs
+++ b/CRM/views/import-agent.ejs
@@ -74,7 +74,7 @@
     </div>
     <footer class="c-footer">
       <!-- Footer content here -->
-      <h1>Footer Content</h1>
+      <% include partials/footer %>
     </footer>
   </div>
 
