--- a/CRM/views/import-client.ejs
+++ b/CRM/views/import-client.ejs
@@ -172,7 +172,7 @@
     </div>
     <footer class="c-footer">
       <!-- Footer content here -->
-      <h1>Footer Content</h1>
+      <% include partials/footer %>
     </footer>
   </div>
 
