--- a/CRM/views/search-client.ejs
+++ b/CRM/views/search-client.ejs
@@ -61,7 +61,7 @@
     </div>
     <footer class="c-footer">
       <!-- Footer content here -->
-      <h1>Footer Content</h1>
+      <% include partials/footer %>
     </footer>
   </div>
 
