--- a/CRM/views/view-event.ejs
+++ b/CRM/views/view-event.ejs
@@ -833,7 +833,7 @@
     </div>
     <footer class="c-footer">
       <!-- Footer content here -->
-      <h1>Footer Content</h1>
+      <% include partials/footer %>
     </footer>
   </div>
 
