--- a/CRM/views/entry-client.ejs
+++ b/CRM/views/entry-client.ejs
@@ -42,9 +42,14 @@
                   <label for="agentName">Agent Assignment</label>
                   <select class="form-control" id="agentAbbrev" name="agentAbbrev" required>
               		<%
-                    	var list = '<option value="" disabled selected>Select</option>';
-                    	for (i = 0; i < agentList.length; i++) {
-                    		list += '<option>' + agentList[i].agentAbbrev + '</option>';
+                      var sortedAgents = agentList.sort(function(a,b){
+                          if (a.agentAbbrev > b.agentAbbrev) { return 1;}
+                          if (a.agentAbbrev < b.agentAbbrev) {return -1;}
+                          return 0;
+                      });
+                      var list = '<option value="" disabled selected>Select</option>';
+                    	for (i = 0; i < sortedAgents.length; i++) {
+                    		list += '<option>' + sortedAgents[i].agentAbbrev + '</option>';
                     	}
               		%>
                   	<%- list %>
