--- a/CRM/views/entry-contact.ejs
+++ b/CRM/views/entry-contact.ejs
@@ -36,9 +36,14 @@
                 <label for="clientID">Client</label>
                   <select class="form-control" name="clientID" required>
                   <%
+                      var sortedClients = clientList.sort(function(a,b){
+                          if (a.clientName > b.clientName) { return 1;}
+                          if (a.clientName < b.clientName) {return -1;}
+                          return 0;
+                      });
                       var list = '<option value="" disabled selected>Select</option>';
-                      for (i = 0; i < clientList.length; i++) {
-                        list += '<option>' + clientList[i].clientName + '</option>';
+                      for (i = 0; i < sortedClients.length; i++) {
+                        list += '<option>' + sortedClients[i].clientName + '</option>';
                       }
                   %>
                     <%- list %>
