--- a/CRM/views/import-client.ejs
+++ b/CRM/views/import-client.ejs
@@ -81,11 +81,16 @@
                   <label>Agent Abbreviation</label>
                   <select class="form-control" id="agentAbbrev" name="agentAbbrev">
                     <%
+                        var sortedAgents = agentList.sort(function(a,b){
+                            if (a.agentAbbrev > b.agentAbbrev) { return 1;}
+                            if (a.agentAbbrev < b.agentAbbrev) {return -1;}
+                            return 0;
+                        });
                         var list = '<option value="" disabled selected>Select</option>';
-                        for (i = 0; i < agentList.length; i++) {
-                          list += '<option>' + agentList[i].agentAbbrev + '</option>';
-                        }
-                    %>
+                      	for (i = 0; i < sortedAgents.length; i++) {
+                      		list += '<option>' + sortedAgents[i].agentAbbrev + '</option>';
+                      	}
+                		%>
                       <%- list %>
                   </select>
                 </div>
