--- a/CRM/views/report-contact-history.ejs
+++ b/CRM/views/report-contact-history.ejs
@@ -36,9 +36,14 @@
                   <label for="clientID">Client</label>
                   <select class="form-control" name="clientSelect" id="clientSelect" onChange="changeAgent(this.value);" required>
                   <%
+                      var sortedClients = reportContactHistoryClients.sort(function(a,b){
+                          if (a.clientName > b.clientName) { return 1;}
+                          if (a.clientName < b.clientName) {return -1;}
+                          return 0;
+                      });
                       var list = '<option value="" disabled selected>Select</option>';
-                      for (i = 0; i < locals.clients.length; i++) {
-                        list += '<option value="' + locals.clients[i].clientName + '">' + locals.clients[i].clientName + '</option>';
+                      for (i = 0; i < sortedClients.length; i++) {
+                        list += '<option value="' + sortedClients[i].clientName + '">' + sortedClients[i].clientName + '</option>';
                       }
                   %>
                     <%- list %>
