--- a/CRM/views/search-contact.ejs
+++ b/CRM/views/search-contact.ejs
@@ -36,9 +36,14 @@
                       <label for="contactSelect">Select Client</label>
                       <select class="form-control" id="clientID" name="clientID" onChange="changeContact(this.value);" required>
                         <%
+                            var sortedClients = clientList.sort(function(a,b){
+                                if (a.clientName > b.clientName) { return 1;}
+                                if (a.clientName < b.clientName) {return -1;}
+                                return 0;
+                            });
                             var list = '<option value="" disabled selected>Select</option>';
-                            for (i = 0; i < clientList.length; i++) {
-                              list += '<option value="' + clientList[i].clientName + '">' + clientList[i].clientName + '</option>';
+                            for (i = 0; i < sortedClients.length; i++) {
+                              list += '<option>' + sortedClients[i].clientName + '</option>';
                             }
                         %>
                           <%- list %>
