--- a/CRM/views/entry-user.ejs
+++ b/CRM/views/entry-user.ejs
@@ -66,16 +66,12 @@
                 </div>
                 <div class="form-group col-12 col-md-auto">
                   <label for="newUserType">User Type</label>
-                  <select class="form-control" id="newUserType" name="newUserType"  required>
+                  <select class="form-control" id="newUserType" name="newUserType" onchange = "EnableDisableBox(this)" required>
                     <option value="" disabled selected>Select</option>
-                    <option>Administrator</option>
-                    <option>Agent</option>
-                    <option>Read-Only</option>
+                    <option value="1">Administrator</option>
+                    <option value="2">Agent</option>
+                    <option value="3">Read-Only</option>
                   </select>
-                </div>
-                <div class="form-group col-12 col-md-auto">
-                  <label for="agentAbbrev">Agent Abbreviation</label>
-                  <input type="text" class="form-control" id="agentAbbrev" name="agentAbbrev" placeholder="Use All Caps">
                 </div>
               </div>
 
@@ -95,39 +91,57 @@
                 </div>
               </div>
 
+              <hr>
 
-          <!-- Agent Name-->
-            <label for="agentName">Agent Name</label>
               <div class="form-row">
-          			<div class="form-group col-12 col-md-auto">
-          			  <input type="text" class="form-control" id="agentFirstName" name="agentFirstName" placeholder="First Name" required>
-          			</div>
-          			<div class="form-group col-12 col-md-auto">
-          			  <input type="text" class="form-control" id="agentLastName" name="agentLastName" placeholder="Last Name" required>
-          			</div>
+                <div class="col-12 col-md-6">
+                  <div class="card bg-light border-dark" style="width: auto;">
+                    <div class="card-header">
+                       Agent Details - if applicable
+                    </div>
+                    <div class="card-body">
+                      <!-- Agent Name-->
+                          <div class="form-row">
+                            <div class="form-group col-12 col-md-auto">
+                              <label for="agentName">First Name</label>
+                              <input type="text" class="form-control" id="agentFirstName" name="agentFirstName" placeholder="First Name" required disabled>
+                            </div>
+                            <div class="form-group col-12 col-md-auto">
+                              <label for="agentName">Last Name</label>
+                              <input type="text" class="form-control" id="agentLastName" name="agentLastName" placeholder="Last Name" required disabled>
+                            </div>
+                            <div class="form-group col-12 col-md-auto">
+                              <label for="agentAbbrev">Agent Abbreviation</label>
+                              <input type="text" class="form-control" id="agentAbbrev" name="agentAbbrev" placeholder="Use All Caps" required disabled>
+                            </div>
+                          </div>
+
+                      <!-- User Position-->
+                      <div class="form-row">
+                          <div class="form-group col-12 col-md-auto">
+                            <label for="agentPosition">Position</label>
+                            <select class="form-control" id="agentPosition" name="agentPosition" required disabled>
+                            <option value="" disabled selected>Select</option>
+                            <option>Sales Executive</option>
+                            <option>Office</option>
+                            <option>Sales Manager</option>
+                          </select>
+                          </div>
+                      </div>
+
+
+                      <!-- Agent Phone Number-->
+                        <label for="agentAbbrev">Agent Phone Number</label>
+                          <div class="form-row">
+                            <div class="form-group col-12 col-md-auto">
+                              <input type="text" class="form-control" id="agentPhone" name="agentPhone" placeholder="Contact Number" disabled>
+                            </div>
+                        </div>
+                    </div>
+                  </div>
+                </div>
               </div>
 
-          <!-- User Position-->
-          <div class="form-row">
-              <div class="form-group col-12 col-md-auto">
-                <label for="agentPosition">Position</label>
-                <select class="form-control" id="agentPosition" name="agentPosition" required>
-                <option value="" disabled selected>Select</option>
-          		  <option>Sales Executive</option>
-          		  <option>Office</option>
-          		  <option>Sales Manager</option>
-          	  </select>
-              </div>
-          </div>
-
-
-          <!-- Agent Phone Number-->
-            <label for="agentAbbrev">Agent Phone Number</label>
-              <div class="form-row">
-          			<div class="form-group col-12 col-md-auto">
-          			  <input type="text" class="form-control" id="agentPhone" name="agentPhone" placeholder="Contact Number">
-          			</div>
-          	</div>
             <div class="row">
               <div class="col-12 col-md-auto">
                 <input class="btn-block btn-primary btn-lg" type="submit" value="Submit">
@@ -147,5 +161,35 @@
  <!-- Popper.js first, then CoreUI JS -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha384-L2pyEeut/H3mtgCBaUNw7KWzp5n9&#43;4pDQiExs933/5QfaTh8YStYFFkOzSoXjlTb" crossorigin="anonymous"></script>
  <script src="https://unpkg.com/@coreui/coreui@3.0.0-rc.0/dist/js/coreui.min.js"></script>
+ <script type="text/javascript">
+  function EnableDisableBox(newUserType) {
+      var selectedValue = newUserType.options[newUserType.selectedIndex].value;
+      var agentFN = document.getElementById("agentFirstName");
+      agentFN.disabled = selectedValue == 2 ? false : true;
+      if (!agentFN.disabled) {
+          agentFN.blur();
+      }
+      var agentLN = document.getElementById("agentLastName");
+      agentLN.disabled = selectedValue == 2 ? false : true;
+      if (!agentLN.disabled) {
+          agentLN.blur();
+      }
+      var agentAB = document.getElementById("agentAbbrev");
+      agentAB.disabled = selectedValue == 2 ? false : true;
+      if (!agentAB.disabled) {
+          agentAB.blur();
+      }
+      var agentPOS = document.getElementById("agentPosition");
+      agentPOS.disabled = selectedValue == 2 ? false : true;
+      if (!agentPOS.disabled) {
+          agentPOS.blur();
+      }
+      var agentTEL = document.getElementById("agentPhone");
+      agentTEL.disabled = selectedValue == 2 ? false : true;
+      if (!agentTEL.disabled) {
+          agentTEL.blur();
+      }
+  }
+</script>
  </body>
 </html>
