--- a/CRM/views/edit-users.ejs
+++ b/CRM/views/edit-users.ejs
@@ -36,11 +36,8 @@
               <label for="userName">Username</label>
               <input type="text" class="form-control" id="userName" name="userName" value = "<%= results[0].username %>" >
             </div>
-          </div>
-
-          <div class="form-row">
             <div class="form-group col-12 col-md-auto">
-              <label for="userName">Role</label>
+              <label for="userName">User Type</label>
               <select class="form-control" id="userRole" name="userRole" required>
                       <%
                       var roleList = '';
@@ -65,6 +62,28 @@
 
           <div class="form-row">
             <div class="form-group col-12 col-md-auto">
+              <label for="newPassword">Password</label>
+              <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="Password"  required>
+            </div>
+            <div class="form-group col-12 col-md-auto">
+              <label for="newPasswordRetype">Re-Type Password</label>
+              <input type="password" class="form-control" id="newPasswordRetype" name="newPasswordRetype" placeholder="Re-TypePassword" required>
+            </div>
+            <div class="form-group col-12 col-md-auto">
+              <label>Change Password on Login</label>
+              <%
+                  var changePWList = '';
+                  if(results[0].changePwOnLogin){
+                  changePWList += '<input type="checkbox" class="form-control" id="changePW" name="changePW" checked>';
+                }else{
+                changePWList += '<input type="checkbox" class="form-control" id="changePW" name="changePW">';
+              }
+              %>
+              <%- changePWList %>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-12 col-md-auto">
               <label for="userStatus">Status</label>
               <select type="name" class="form-control" id="userStatus" name="userStatus"  required>
                     <%
@@ -81,22 +100,55 @@
               </select>
             </div>
           </div>
-
+          <hr>
           <div class="form-row">
-            <div class="form-group col-12 col-md-auto">
-              <label>Change Password on Login</label>
-              <%
-                  var changePWList = '';
-                  if(results[0].changePwOnLogin){
-                  changePWList += '<input type="checkbox" class="form-control" id="changePW" name="changePW" checked>';
-                }else{
-                changePWList += '<input type="checkbox" class="form-control" id="changePW" name="changePW">';
-              }
-              %>
-              <%- changePWList %>
+            <div class="col-12 col-md-6">
+              <div class="card bg-light border-dark" style="width: auto;">
+                <div class="card-header">
+                   Agent Details - if applicable
+                </div>
+                <div class="card-body">
+                  <!-- Agent Name-->
+                      <div class="form-row">
+                        <div class="form-group col-12 col-md-auto">
+                          <label for="agentName">First Name</label>
+                          <input type="text" class="form-control" id="agentFirstName" name="agentFirstName" placeholder="First Name" required disabled>
+                        </div>
+                        <div class="form-group col-12 col-md-auto">
+                          <label for="agentName">Last Name</label>
+                          <input type="text" class="form-control" id="agentLastName" name="agentLastName" placeholder="Last Name" required disabled>
+                        </div>
+                        <div class="form-group col-12 col-md-auto">
+                          <label for="agentAbbrev">Agent Abbreviation</label>
+                          <input type="text" class="form-control" id="agentAbbrev" name="agentAbbrev" placeholder="Use All Caps" required disabled>
+                        </div>
+                      </div>
+
+                  <!-- User Position-->
+                  <div class="form-row">
+                      <div class="form-group col-12 col-md-auto">
+                        <label for="agentPosition">Position</label>
+                        <select class="form-control" id="agentPosition" name="agentPosition" required disabled>
+                        <option value="" disabled selected>Select</option>
+                        <option>Sales Executive</option>
+                        <option>Office</option>
+                        <option>Sales Manager</option>
+                      </select>
+                      </div>
+                  </div>
+
+
+                  <!-- Agent Phone Number-->
+                    <label for="agentAbbrev">Agent Phone Number</label>
+                      <div class="form-row">
+                        <div class="form-group col-12 col-md-auto">
+                          <input type="text" class="form-control" id="agentPhone" name="agentPhone" placeholder="Contact Number" disabled>
+                        </div>
+                    </div>
+                </div>
+              </div>
             </div>
           </div>
-
           <div class="row">
             <div class="col-12 col-md-auto">
               <button type="submit" class="btn-block btn-primary btn-lg">Submit</button>
