--- a/CRM/views/entry-user.ejs
+++ b/CRM/views/entry-user.ejs
@@ -73,6 +73,21 @@
                     <option value="3">Read-Only</option>
                   </select>
                 </div>
+                <div class="form-group col-12 col-md-auto">
+                  <label for="agentAbbrev">Agent Abbreviation</label>
+                  <input type="text" class="form-control" id="agentAbbrev" name="agentAbbrev" placeholder="Use All Caps" required disabled>
+                </div>
+              </div>
+
+              <div class="form-row">
+                <div class="form-group col-12 col-md-auto">
+                  <label for="agentName">First Name</label>
+                  <input type="text" class="form-control" id="agentFirstName" name="agentFirstName" placeholder="First Name" required>
+                </div>
+                <div class="form-group col-12 col-md-auto">
+                  <label for="agentName">Last Name</label>
+                  <input type="text" class="form-control" id="agentLastName" name="agentLastName" placeholder="Last Name" required>
+                </div>
               </div>
 
 
@@ -83,7 +98,7 @@
                 </div>
                 <div class="form-group col-12 col-md-auto">
                   <label for="newPasswordRetype">Re-Type Password</label>
-                  <input type="password" class="form-control" id="newPasswordRetype" name="newPasswordRetype" placeholder="Re-TypePassword" required>
+                  <input type="password" class="form-control" id="newPasswordRetype" name="newPasswordRetype" placeholder="Re-Type Password" required>
                 </div>
                 <div class="form-group col-12 col-md-auto">
                   <label for="changePW">Change Password on First Login?</label>
@@ -91,56 +106,19 @@
                 </div>
               </div>
 
-              <hr>
-
               <div class="form-row">
-                <div class="col-12 col-md-6">
-                  <div class="card bg-light border-dark" style="width: auto;">
-                    <div class="card-header">
-                       Agent Details - if applicable
-                    </div>
-                    <div class="card-body">
-                      <!-- Agent Name-->
-                          <div class="form-row">
-                            <div class="form-group col-12 col-md-auto">
-                              <label for="agentName">First Name</label>
-                              <input type="text" class="form-control" id="agentFirstName" name="agentFirstName" placeholder="First Name" required disabled>
-                            </div>
-                            <div class="form-group col-12 col-md-auto">
-                              <label for="agentName">Last Name</label>
-                              <input type="text" class="form-control" id="agentLastName" name="agentLastName" placeholder="Last Name" required disabled>
-                            </div>
-                            <div class="form-group col-12 col-md-auto">
-                              <label for="agentAbbrev">Agent Abbreviation</label>
-                              <input type="text" class="form-control" id="agentAbbrev" name="agentAbbrev" placeholder="Use All Caps" required disabled>
-                            </div>
-                          </div>
-
-                      <!-- User Position-->
-                      <div class="form-row">
-                          <div class="form-group col-12 col-md-auto">
-                            <label for="agentPosition">Position</label>
-                            <select class="form-control" id="agentPosition" name="agentPosition" required disabled>
-                            <option value="" disabled selected>Select</option>
-                            <option>Sales Executive</option>
-                            <option>Office</option>
-                            <option>Sales Manager</option>
-                          </select>
-                          </div>
-                      </div>
-
-
-                      <!-- Agent Phone Number-->
-                        <label for="agentAbbrev">Agent Phone Number</label>
-                          <div class="form-row">
-                            <div class="form-group col-12 col-md-auto">
-                              <input type="text" class="form-control" id="agentPhone" name="agentPhone" placeholder="Contact Number" disabled>
-                            </div>
-                        </div>
-                    </div>
+                  <div class="form-group col-12 col-md-auto">
+                    <label for="agentPosition">Position</label>
+                    <select class="form-control" id="agentPosition" name="agentPosition" required>
+                    <option value="" disabled selected>Select</option>
+                    <option>Sales Executive</option>
+                    <option>Office</option>
+                    <option>Sales Manager</option>
+                  </select>
                   </div>
-                </div>
               </div>
+
+
 
             <div class="row">
               <div class="col-12 col-md-auto">
@@ -164,31 +142,13 @@
  <script type="text/javascript">
   function EnableDisableBox(newUserType) {
       var selectedValue = newUserType.options[newUserType.selectedIndex].value;
-      var agentFN = document.getElementById("agentFirstName");
-      agentFN.disabled = selectedValue == 2 ? false : true;
-      if (!agentFN.disabled) {
-          agentFN.blur();
-      }
-      var agentLN = document.getElementById("agentLastName");
-      agentLN.disabled = selectedValue == 2 ? false : true;
-      if (!agentLN.disabled) {
-          agentLN.blur();
-      }
+
       var agentAB = document.getElementById("agentAbbrev");
       agentAB.disabled = selectedValue == 2 ? false : true;
       if (!agentAB.disabled) {
           agentAB.blur();
       }
-      var agentPOS = document.getElementById("agentPosition");
-      agentPOS.disabled = selectedValue == 2 ? false : true;
-      if (!agentPOS.disabled) {
-          agentPOS.blur();
-      }
-      var agentTEL = document.getElementById("agentPhone");
-      agentTEL.disabled = selectedValue == 2 ? false : true;
-      if (!agentTEL.disabled) {
-          agentTEL.blur();
-      }
+
   }
 </script>
  </body>
